fixes #109 フロントを作り直す

--- a/app/assets/stylesheets/const.scss
+++ b/app/assets/stylesheets/const.scss
@@ -1,1 +1,9 @@
 $mobile-brakepoint: 600px;
+$container-top-size: 10px;
+
+$edge-gray: #454545;
+$main-background-color: #232323;
+$light-background-color: #333;
+$verylight-background-color: #444;
+$verylight-hover-background-color: #555;
+$main-font-color: #bbb;
