--- a/app/assets/stylesheets/media_manage.scss
+++ b/app/assets/stylesheets/media_manage.scss
@@ -1,17 +1,49 @@
-@import "const";
+@use "const";
 
-.media-length {
-  background-color: rgba(0, 0, 0, 0.7 );
-  color: white;
-  border-radius: 6px;
-  font-size: 20px;
+.media-manage-show__action-buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+.media-manage-show__action-button {
+  display: block;
+  padding: 3px 4px 0;
+  margin-top: 5px;
+  margin-right: 6px;
+  height: 50px;
+  width: 96px;
+  font-size: 18px;
+  border: 1px solid const.$edge-gray;
+  background-color: const.$light-background-color;
+  border-radius: 2px;
+  color: const.$main-font-color;
+  text-align: center;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+
+  &-text {
+    font-size: 10px;
+    margin-top: 10px;
+  }
+
+  .material-icons + .media-manage-show__action-button-text {
+    margin-top: 2px;
+  }
 }
 
-.media-manage-show-thumbnail {
+.media-manage-show__media-info {
+  display: flex;
+  margin: 10px 0;
+
+  @media (max-width: const.$mobile-brakepoint) {
+    flex-wrap: wrap;
+  }
+}
+.media-manage-show__thumbnail {
   display: block;
   position: relative;
   width: 240px;
-  margin-top: 10px;
+  margin-right: 10px;
+
   & > .media-length {
     display: block;
     position: absolute;
@@ -23,47 +55,82 @@
     margin-bottom: 2px;
   }
 }
+.media-manage-show__media-detail {
+  @media (max-width: const.$mobile-brakepoint) {
+    margin-top: 10px;
+  }
 
-.media-manage-card {
-  & > .card-image {
-    & > .card-title {
-      right: 0;
-      left: auto;
-      padding: 0;
-      margin-right: 2px;
-      margin-bottom: 2px;
-      font-size: 12px;
+  .show-media-manag-title {
+    margin-bottom: 8px;
+  }
+}
+
+.waching-data-section {
+  margin-top: 16px;
+
+  .time-span-collection {
+    list-style: none;
+  }
+  .collection-item {
+    border: 1px solid const.$edge-gray;
+    border-radius: 2px;
+    background-color: const.$light-background-color;
+    padding: 6px;
+
+    .time-span-item {
+      margin-top: 2px;
+    }
+
+    .time-span-icons {
+      margin: 0 5px;
+      padding: 0 8px;
+      border: 1px solid const.$edge-gray;
+      border-radius: 4px;
+
+      a {
+        color: const.$main-font-color;
+      }
     }
   }
-  & > .card-stacked {
-    & > .card-action {
-      padding-top: 2px;
-      padding-bottom: 2px;
-      padding-right: 6px;
-      padding-left: 6px;
-      & > a {
-        font-size: 1.2em;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;  
-        overflow: hidden;
-        text-transform: none !important;
-        @media (max-width: $mobile-brakepoint) {
-          font-size: 1em;
-          -webkit-line-clamp: 3;
-        }
-      }
-    }
+}
+.media_time_image-collection {
+  margin-top: 16px;
+  list-style: none;
+}
 
-    & > .card-content {
-      padding-top: 2px;
-      padding-bottom: 2px;
-      padding-right: 6px;
-      padding-left: 6px;
-      & > p .material-icons {
-        vertical-align: middle;
-        font-size: 1.2em;
-      }
+.media-manage__card {
+  display: flex;
+  background-color: const.$light-background-color;
+  border-radius: 2px;
+  margin-top: 10px;
+
+  &-image {
+    position: relative;
+    width: 160px;
+    &-media-length {
+      position: absolute;
+      padding: 2px;
+      right: 1px;
+      bottom: 3px;
+      font-size: 12px;
+      background-color: const.$main-background-color;
+      border-radius: 4px;
+    }
+  }
+  &-info {
+    padding: 8px;
+    &-title {
+      display: -webkit-box;
+      margin-bottom: 10px;
+      max-height: 3em;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-box-orient: vertical;
+    }
+    &-status {
+      font-size: 14px;
+      color: #888;
     }
   }
 }
@@ -117,7 +184,7 @@
     display: block;
     font-family: 'Noto Sans', sans-serif;
 
-    @media (max-width: $mobile-brakepoint) {
+    @media (max-width: const.$mobile-brakepoint) {
       font-size: 25px;
     }
   }
@@ -165,4 +232,13 @@
 .duplicate-media-url {
   font-size: 18px;
   color: red;
+}
+
+.media-manage-edit__content {
+  margin-bottom: 10px;
+
+  .media_manage-edit-details__content {
+    margin-top: 5px;
+    padding-left: 20px;
+  }
 }
