--- a/app/assets/stylesheets/media_search.scss
+++ b/app/assets/stylesheets/media_search.scss
@@ -1,4 +1,4 @@
-@import "const";
+@use "const";
 
 .search-bar {
   display: flex;
@@ -6,42 +6,41 @@
     display: inline-block;
     width: 80%;
   }
-  & > input[name="commit"] {
-    display: inline-block;
+  .search-bar__submit {
+    margin-left: 10px;
+    height: 34px;
     width: 50px;
-    margin: 10px;
-    padding: 0;
   }
 }
 
 .search-options {
   display: flex;
-  @media (max-width: $mobile-brakepoint) {
+  margin-top: 10px;
+  @media (max-width: const.$mobile-brakepoint) {
     flex-direction: column;
   }
 }
 
 .search-checkbox-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .search-checkbox {
   margin-right: 10px;
+  font-size: 14px;
 
-  @media (max-width: $mobile-brakepoint) {
+  @media (max-width: const.$mobile-brakepoint) {
     margin-top: 8px;
     margin-bottom: 8px;
-  }
-
-  & > label > span {
-    padding-left: 25px !important;
   }
 }
 
 .sort-form {
   display: flex;
+  height: 28px;
 
-  @media (max-width: $mobile-brakepoint) {
+  @media (max-width: const.$mobile-brakepoint) {
     margin-top: 8px;
     margin-bottom: 8px;
   }
