--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,18 @@
-<h2>認証メール再送</h2>
+<h1 class="page-title">認証メール再送</h1>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="c-form">
+  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
+    <div class="c-form__field">
+      <%= f.label :email %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "c-input c-form__field-input" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "送信", class: "waves-light btn" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit "送信", class: "c-button c-button--confirm" %>
+    </div>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
