--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
-<h2>パスワード再設定</h2>
+<h1 class="page-title">パスワード再設定</h1>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="c-form">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="c-form__field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "c-input c-form__field-input" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "送信", class: "waves-light btn" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit "送信", class: "c-button c-button--confirm" %>
+    </div>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
