--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,51 +1,53 @@
-<h2>
+<h1 class="page-title">
   <% if resource_name.to_s == "user" %>
     ユーザー情報編集
   <% else %>
     <% raise RuntimeError, "resource_name=#{resource_name.to_s}は未対応です。" %>
   <% end %>
-</h2>
+</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="c-form">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="c-form__field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "c-input c-form__field-input" %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>次メールアドレスの確認を待っています: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> 
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %>文字以上)</em>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>次メールアドレスの確認を待っています: <%= resource.unconfirmed_email %></div>
     <% end %>
-    <br />
-    <i>(パスワードを変更しない場合は空欄のままにしてください。)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="c-form__field">
+      <%= f.label :password %> 
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %>文字以上)</em>
+      <% end %>
+      <br />
+      <i>(パスワードを変更しない場合は空欄のままにしてください。)</i><br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "c-input c-form__field-input" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(ユーザー情報を変更するには現在のパスワードが必要です)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+    <div class="c-form__field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "c-input c-form__field-input" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "更新", class: "waves-light btn" %>
-    <%= link_to "キャンセル", :back, class: "waves-light btn yellow darken-3" %>
-  </div>
-<% end %>
+    <div class="c-form__field">
+      <%= f.label :current_password %> <i>(ユーザー情報を変更するには現在のパスワードが必要です)</i><br />
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "c-input c-form__field-input" %>
+    </div>
 
+    <div class="actions">
+      <%= link_to "キャンセル", :back, class: "c-button" %>
+      <%= f.submit "更新", class: "c-button c-button--confirm" %>
+    </div>
+  <% end %>
+</div>
 
-<h3>アカウントを削除</h3>
+<h1 class="page-title">アカウントを削除</h1>
 
-<p>アカウントを削除しますか？ <%= button_to "アカウントを削除する", registration_path(resource_name),
-  data: { confirm: "本当に削除してよろしいですか？" }, method: :delete, class: "waves-light btn red" %></p>
+<div>アカウントを削除しますか？</div>
+<%= button_to "アカウントを削除する", registration_path(resource_name),
+  data: { confirm: "本当に削除してよろしいですか？" }, method: :delete, class: "c-button c-button--warning" %>
