--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,8 @@
     </div>
 
     <div class="landing-buttons">
-      <%= link_to "ログイン", new_user_session_path, class: "waves-effect btn" %>
-      <%= link_to "サインアップ", new_user_registration_path, class: "waves-effect btn red" %>
+      <%= link_to "ログイン", new_user_session_path, class: "c-button" %>
+      <%= link_to "サインアップ", new_user_registration_path, class: "c-button" %>
     </div>
 
     <div class="landing-seekbar">
